--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.thf.AppSwitcher"
         minSdk 21
         targetSdk 30
-        versionCode 2626
-        versionName "2.6.26alpha"
+        versionCode 2700
+        versionName "2.7"
     }
 
     buildTypes {
