--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,7 +92,7 @@
         <service
             android:name="com.thf.AppSwitcher.service.AppSwitcherService"
             android:enabled="true"
-            android:exported="true" />
+            android:exported="false" />
 
         <receiver
             android:name="com.thf.AppSwitcher.service.BootUpReceiver"
