--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.thf.AppSwitcher"
         minSdk 21
         targetSdk 30
-        versionCode 2704
-        versionName "2.7.4"
+        versionCode 3002
+        versionName "3.0.2alpha"
     }
 
     buildTypes {
@@ -37,5 +37,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'androidx.preference:preference:1.2.0'
-    implementation 'org.shredzone.commons:commons-suncalc:3.5'
+    implementation 'org.shredzone.commons:commons-suncalc:3.7'
 }
